--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "mssql": "^11.0.1"
   }
 }
